syntax="proto3";
package quote;

option go_package = "github.com/akolpakov-somehash/go-microservices/proto/sale/quote";


message Empty {}

message CustomerId {
    string id = 1;
}

message QuoteItem {
    string id = 1;
    string productId = 2;
    string price = 3;
}

message Quote {
    string id = 1;
    string customerId = 2;
    repeated QuoteItem items = 3;
}

message ProductRequest {
    string customerId = 1;
    string productId = 2;
    int32 quantity = 3;
}

service QuoteService {
    rpc GetQuote(CustomerId) returns (Quote) {}
    rpc AddProduct(ProductRequest) returns (Quote) {}
    rpc RemoveProduct(ProductRequest) returns (Quote) {}
    rpc UpdateQuantity(ProductRequest) returns (Quote) {}
}